# IHateDNS

./: .gitignore  README.md  ihatedns.py  pyproject.toml
